redisigned text input boxes realignment and fixed some bugs

--- a/login/login.css
+++ b/login/login.css
@@ -51,7 +51,7 @@ h1 span{ color:#00ffc6; }
 
 .login-box input{
   width:100%;
-  margin:10px 0;
+  margin: 0;
   padding:12px;
   border:none;
   border-radius:10px;
