--- a/register/register.css
+++ b/register/register.css
@@ -51,7 +51,7 @@ h1 span{ color:#00ffc6; }
 
 .login-box input{
   width:100%;
-  margin:10px 0;
+  margin: 0;
   padding:12px;
   border:none;
   border-radius:10px;
@@ -324,7 +324,7 @@ h1 span{ color:#00ffc6; }
 .custom-date #dobDisplay {
   display: flex;
   align-items: center;   
-  margin: 10px 0;     
+  margin: 0;     
   height: 48px;         
   padding: 0 12px 0 40px;
   border: 1px solid rgba(255,255,255,0.25);
